--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "jest": "^24.8.0",
+    "jest": "^26.6.3",
     "mustache": "^3.0.1",
     "mustache-express": "^1.2.8",
     "nodemon": "^1.19.4",
     "supertest": "^4.0.2"
   },
   "nodemonConfig": {
-    "ignore": ["*.test.js"]
+    "ignore": [
+      "*.test.js"
+    ]
   }
 }
